Fixed mobile text alignment and sizing

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -28,7 +28,7 @@
 
 	p
 	{
-		text-align: justify;
+
 	}
 
 	section,
@@ -126,6 +126,26 @@
 				width: 100% !important;
 			}
 
+/*********************************************************************************/
+/* Header                                                                        */
+/*********************************************************************************/
+
+header {
+	padding: 0em;
+}
+
+header h2 {
+	font-size: 40pt;
+}
+
+
+/*********************************************************************************/
+/* About                                                                         */
+/*********************************************************************************/
+
+#about-wrapper p {
+	text-align: center;
+}
 
 /*********************************************************************************/
 /* UI                                                                            */
