--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -7,6 +7,10 @@
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
+header {
+	padding-top: 3em;
+}
+
 
 	/* Forms */
 
@@ -63,7 +67,7 @@
 	{
 		padding: 5em 0em 5em 0em;
 	}
-	
+
 		#banner header
 		{
 			margin-bottom: 2em;
@@ -73,7 +77,7 @@
 			{
 				font-size: 3.5em;
 			}
-			
+
 			#banner header .byline
 			{
 				font-size: 1.5em;
@@ -96,7 +100,7 @@
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
-	
+
 	#footer
 	{
 		padding: 5em 0em;
